# torchchat

./: .flake8  .gitignore  .gitmodules  .lintrunner.toml  CMakeLists.txt  CONTRIBUTING.md  GETTING-STARTED.md  GPTQ.py  LICENSE  Makefile  README.md  _package_aoti.py  _torchchat_test_script.py  aoti_export.py  aoti_wrapper.py  benchmarking_cuda.sh  benchmarking_mac.sh  builder.py  chat_dist_rank0.csv  chat_in_browser.py  chat_master.csv  cli.py  demo_distributed_inference.sh  demo_singlegpu.sh  dist_back.py  dist_run.py  download.py  et_export.py  et_generate.py  et_wrapper.py  eval.py  export.py  export_aoti.py  export_aoti_util.py  export_et.py  export_et_util.py  flamingo.json  freq_compare.py  generate.py  gguf_loader.py  (+35 more)
.github/: pytorch-probot.yml
.pins/: et-pin.txt  torchao-pin.txt
_custom_linear/: CMakeLists.txt  _custom_linear.py  build.sh  custom_linear.cpp  custom_linear.h  main.cpp  quantize.py
adaptive/: threading.py  types.py
android/: README.md
api/: api.py  models.py
browser/: browser.py  chat_in_browser.py  package.json
config/: model_config.py  models.json
custom_linear_8da4w/: CMakeLists.txt  _custom_linear.py  build.sh  custom_linear_8da4w.cpp  quantize.py
custom_linear_8da4w/cpuinfo/: .travis.yml  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  WORKSPACE.bazel  appveyor.yml  configure.py  confu.yaml  libcpuinfo.pc.in
custom_linear_8da4w/cpuinfo/.github/workflows/: build.yml
custom_linear_8da4w/cpuinfo/bench/: get-current.cc  init.cc
custom_linear_8da4w/cpuinfo/include/: cpuinfo.h
custom_linear_8da4w/cpuinfo/jni/: Android.mk  Application.mk
custom_linear_8da4w/cpuinfo/scripts/: android-arm64-auxv-dump.sh  android-arm64-build.sh  android-arm64-mock.sh  android-arm64-test.sh  android-armv7-auxv-dump.sh  android-armv7-build.sh  android-armv7-cache-info.sh  android-armv7-cpu-info.sh  android-armv7-isa-info.sh  android-armv7-mock.sh  android-armv7-test.sh  android-device-dump.py  android-x86-build.sh  android-x86-cache-info.sh  android-x86-cpu-info.sh  android-x86-cpuid-dump.sh  android-x86-isa-info.sh  android-x86-mock.sh  arm-linux-filesystem-dump.py  local-build.sh  parse-x86-cpuid-dump.py
custom_linear_8da4w/cpuinfo/src/arm/linux/: init.c
custom_linear_8da4w/cpuinfo/src/arm/windows/: init-by-logical-sys-info.c  init.c  windows-arm-init.h
custom_linear_8da4w/cpuinfo/src/cpuinfo/: internal-api.h
custom_linear_8da4w/cpuinfo/test/: arm-cache.cc  get-current.cc  init.cc  size.c
custom_linear_8da4w/cpuinfo/test/mock/: alcatel-revvl.cc  alcatel-revvl.h  alldocube-iwork8.cc  alldocube-iwork8.h  atm7029b-tablet.cc  atm7029b-tablet.h  blu-r1-hd.cc  blu-r1-hd.h  galaxy-a3-2016-eu.cc  galaxy-a3-2016-eu.h  galaxy-a8-2016-duos.cc  galaxy-a8-2016-duos.h  galaxy-a8-2018.cc  galaxy-a8-2018.h  galaxy-c9-pro.cc  galaxy-c9-pro.h  galaxy-grand-prime-value-edition.cc  galaxy-grand-prime-value-edition.h  galaxy-j1-2016.cc  galaxy-j1-2016.h  galaxy-j5.cc  galaxy-j5.h  galaxy-j7-prime.cc  galaxy-j7-prime.h  galaxy-j7-tmobile.cc  galaxy-j7-tmobile.h  galaxy-j7-uae.cc  galaxy-j7-uae.h  galaxy-s3-us.cc  galaxy-s3-us.h  galaxy-s4-us.cc  galaxy-s4-us.h  galaxy-s5-global.cc  galaxy-s5-global.h  galaxy-s5-us.cc  galaxy-s5-us.h  galaxy-s6.cc  galaxy-s6.h  galaxy-s7-global.cc  galaxy-s7-global.h  (+122 more)
custom_linear_8da4w/cpuinfo/test/name/: android-properties-interface.c  android-properties.cc  brand-string.cc  proc-cpuinfo-hardware.cc  ro-arch.cc  ro-board-platform.cc  ro-chipname.cc  ro-mediatek-platform.cc  ro-product-board.cc
custom_linear_8da4w/cpuinfo/tools/: auxv-dump.c  cache-info.c  cpu-info.c  cpuid-dump.c  cpuinfo-dump.c  gpu-dump.c  isa-info.c
custom_linear_8da4w/pthreadpool/: .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  WORKSPACE  configure.py  confu.yaml
custom_linear_8da4w/pthreadpool/bench/: latency.cc  throughput.cc
custom_linear_8da4w/pthreadpool/cmake/: DownloadCpuinfo.cmake  DownloadFXdiv.cmake  DownloadGoogleBenchmark.cmake  DownloadGoogleTest.cmake
custom_linear_8da4w/pthreadpool/examples/: addition.c
custom_linear_8da4w/pthreadpool/jni/: Android.mk  Application.mk
custom_linear_8da4w/pthreadpool/src/: fastpath.c  gcd.c  legacy-api.c  memory.c  portable-api.c  pthreads.c  shim.c  threadpool-atomics.h  threadpool-common.h  threadpool-object.h  threadpool-utils.h  windows.c
custom_linear_8da4w/pthreadpool/test/: pthreadpool-cxx.cc  pthreadpool.cc
custom_linear_8da4w/threadpool/: cpuinfo_utils.cpp  cpuinfo_utils.h  targets.bzl  threadpool.cpp  threadpool.h  threadpool_guard.cpp  threadpool_guard.h
custom_linear_8da4w/threadpool/test/: TARGETS  targets.bzl  threadpool_test.cpp
custom_op/: CMakeLists.txt  cache.cpp  linear.py  op.cpp  op.h  script.sh
distributed/: README.md  __init__.py  baseline.py  checkpoint.py  config_manager.py  download_hf_weights.py  dtensor_utils.py  force_download.py  hf_utils.py  inference.py  logging_utils.py  meta_inference.sh  model_dist.py  model_structure.txt  modeling_utils.py  parallel_config.py  parallelize_llama.py  pp_meta.py  pr_modelling_llama.py  run_dist_inference.sh  run_inference.sh  safetensor_utils.py  tune_import.py  utils.py  verification_utils.py  world_maker.py
docs/: ACKNOWLEDGEMENTS.md  ADVANCED-USERS.md  Android.md  CONTRIBUTING.md  GGUF.md  MISC.md  Models.md  README.md  distributed.md  evaluation.md  executorch_setup.md  iOS.md  local-model.md  (+6 more)
runner-aoti/: CMakeLists.txt  run.cpp
runner-et/: CMakeLists.txt  Utils.cmake  build_android.sh  run.cpp
threadpool_repro/: CMakeLists.txt  build.sh  main.cpp
tokenizer/: CMakeLists.txt  base.py  base64.h  hf_tokenizer.py  hf_tokenizers.cpp  pre_tokenizer.cpp  pre_tokenizer.h  sentencepiece.cpp  tiktoken  tiktoken.cpp  tiktoken.py  token_decoder.cpp  token_decoder.h  tokenize_tool.cpp  tokenizer.h  tokenizer_type.py  tokenizers.cpp  tokenizers.py  unicode-data.cpp  unicode-data.h  unicode.cpp  unicode.h
tokenizer/tests/: main.cpp  pre_tokenizer_test.cpp
unsupported/llama2.c/runner-aoti/: CMakeLists.txt  run.cpp
unsupported/llama2.c/runner-et/: CMakeLists.txt  run.cpp
(+480 files in other folders)
