[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchchat"
version = "0.1.0"
description = "PyTorch showcase for running LLMs on local devices"
authors = [
  {name="PyTorch Team", email="packages@pytorch.org"},
]
license = { file = "LICENSE" }
keywords = ["pytorch", "machine learning", "llm"]
readme = "README.md"

requires-python = ">=3.10"
dependencies=[
  "huggingface_hub",
  "gguf",
  "tiktoken",
  "tokenizers",
  "jinja2",
  "snakeviz",
  "sentencepiece",
  "numpy>=1.17",
  "blobfile",
  "tomli>=1.1.0; python_version < '3.11'",
  "openai",
  "wheel",
  "cmake>=3.24,<4.0.0",
  "ninja",
  "zstd",
  "pytest",
  "streamlit",
  "flask",
  "lm-eval==0.4.7",
]

[tool.setuptools]
packages = ["torchchat"]
